CSS fixes for Application tables in Step 3
Now that we are moving away from One Table To Rule Them All,
we are seeing things break to do with checkboxes in smaller tables.

Generally these are reasonably easy fixes but I found that some
CSS was too narrowly targeted (would not apply to checklists in step 3),
vs other CSS that was too general (_should_ only apply to checklists
in step 5).

--- a/nofos/bloom_nofos/static/theme-orientation-portrait.css
+++ b/nofos/bloom_nofos/static/theme-orientation-portrait.css
@@ -316,7 +316,7 @@ section.section--appendix > .section--content > table {
   width: calc(216mm - 40mm); /* tables in the appendix should be full-width */
 }
 
-table tr td.usa-icon__td--sublist {
+.section--step-5-submit-your-application table tr td.usa-icon__td--sublist {
   padding-left: 30px;
 }
 
@@ -324,5 +324,7 @@ table tr td.usa-icon__td--sublist {
 .section--tables-full-width table.table--small,
 .section--tables-full-width table.table--large,
 .section--tables-full-width table.table--criterion {
-  width: calc(216mm - 40mm) !important; /* Match large table full-width behavior */
+  width: calc(
+    216mm - 40mm
+  ) !important; /* Match large table full-width behavior */
 }
